--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,9 @@
         }
 
     </script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> 
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="265789169606-mfnk2ta04vehg1sohg85a10b6bjc24sb.apps.googleusercontent.com">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div class="chatbot-title2"><h1 class="chatbot-title">Senibot</h1></div>
